--- a/kahi _sample_from_inspire_hep.ipynb
+++ b/kahi _sample_from_inspire_hep.ipynb
@@ -649,7 +649,10 @@
    "id": "f184b590-5be3-4577-8439-3eb564f9b873",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path = \"/home/colav/datos_kahi/udea/produccion 2018-2022 al 27 oct 2022.xlsx\"\n",
+    "df = pd.read_excel(path)"
+   ]
   },
   {
    "cell_type": "code",
@@ -657,7 +660,14 @@
    "id": "e5dd2b19-204f-427d-a5c2-9024d44e5be6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample=[]\n",
+    "for doi in dois:\n",
+    "    for i, row in df.iterrows():\n",
+    "        if doi == row['DOI']:\n",
+    "            sample.append(row)\n",
+    "len(sample)"
+   ]
   },
   {
    "cell_type": "code",
@@ -665,7 +675,10 @@
    "id": "bcc19ddb-8d27-401b-aa40-fd577a5fb25c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_sample = pd.DataFrame(sample)\n",
+    "df_sample.to_excel(\"puntaje.xlsx\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -692,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
