--- a/kahi _sample_from_inspire_hep.ipynb
+++ b/kahi _sample_from_inspire_hep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "0525ad5a-6b29-4bfc-9555-cf125f145e24",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import requests\n",
     "from IPython.display import display, HTML, JSON\n",
     "import math\n",
-    "import re"
+    "import re\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -645,21 +646,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f184b590-5be3-4577-8439-3eb564f9b873",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/home/colav/datos_kahi/udea/produccion 2018-2022 al 27 oct 2022.xlsx\"\n",
+    "path = \"~/data/kahi_data/kahi_data/udea/produccion 2018-2022 al 27 oct 2022.xlsx\"\n",
     "df = pd.read_excel(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "e5dd2b19-204f-427d-a5c2-9024d44e5be6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample=[]\n",
     "for doi in dois:\n",
@@ -671,13 +683,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bcc19ddb-8d27-401b-aa40-fd577a5fb25c",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_sample = pd.DataFrame(sample)\n",
-    "df_sample.to_excel(\"puntaje.xlsx\", index=False)"
+    "df_sample.to_excel(\"puntaje_sample.xlsx\", index=False)"
    ]
   },
   {
@@ -705,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
