added fixed notebook for calculations

--- a/kahi _sample_from_inspire_hep.ipynb
+++ b/kahi _sample_from_inspire_hep.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "1cac6d5e-8bec-47dc-8acb-c2a37a834ce8",
    "metadata": {},
    "outputs": [],
@@ -146,6 +146,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2fbaac8b-201b-4952-ba7f-97384ce4af5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dois.append('10.1016/s0370-2693(00)01067-4')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32a9c11b-6a9b-4f8a-a153-4ba170cc92e0",
    "metadata": {},
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "5549e7f1-c048-4014-a243-b36e3c6dfcbf",
    "metadata": {},
    "outputs": [],
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "660b3793-8211-4bf0-962c-93a27636e01e",
    "metadata": {},
    "outputs": [
@@ -183,7 +193,8 @@
       "https://doi.org/10.1103/physrevd.97.115032\n",
       "https://doi.org/10.1103/physrevd.101.035004\n",
       "https://doi.org/10.1007/jhep04(2020)134\n",
-      "https://doi.org/10.1142/s0217732318500244\n"
+      "https://doi.org/10.1142/s0217732318500244\n",
+      "https://doi.org/10.1016/s0370-2693(00)01067-4\n"
      ]
     }
    ],
@@ -203,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "bdffc99f-2dc8-47db-b928-db55fb441f17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "11"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,17 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "a6adafdf-f6ac-4eef-be9d-515c7f10135c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertManyResult([ObjectId('637cfba0244b9f9d0fe13cd6'), ObjectId('637cfb9d244b9f9d0fe0e8c2'), ObjectId('637cfba2244b9f9d0fe1641d'), ObjectId('637cfb9f244b9f9d0fe113f2'), ObjectId('637cfb9f244b9f9d0fe11528'), ObjectId('637cfba2244b9f9d0fe161bb'), ObjectId('637cfba1244b9f9d0fe151d2'), ObjectId('637cfb9b244b9f9d0fe0ba80'), ObjectId('637cfb9a244b9f9d0fe0b0c4'), ObjectId('637cfba3244b9f9d0fe16be0')], acknowledged=True)"
+       "InsertManyResult([ObjectId('637cfba0244b9f9d0fe13cd6'), ObjectId('637cfb9d244b9f9d0fe0e8c2'), ObjectId('637cfba2244b9f9d0fe1641d'), ObjectId('637cfb9f244b9f9d0fe113f2'), ObjectId('637cfb9f244b9f9d0fe11528'), ObjectId('637cfba2244b9f9d0fe161bb'), ObjectId('637cfba1244b9f9d0fe151d2'), ObjectId('637cfb9b244b9f9d0fe0ba80'), ObjectId('637cfb9a244b9f9d0fe0b0c4'), ObjectId('637cfba3244b9f9d0fe16be0'), ObjectId('637cfbbf244b9f9d0fe4ca00')], acknowledged=True)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "c983fc04-015f-42d0-a8cf-1cc55adffd69",
    "metadata": {},
    "outputs": [],
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "ee70cd31-9424-4e22-a936-e4d69cef54bb",
    "metadata": {},
    "outputs": [
@@ -297,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "id": "e91d405e-e065-4058-a9d9-75893a69b782",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "dc81c0ff-c7f5-4e99-83bb-ad6b7f857219",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertManyResult([ObjectId('5f86370592dec2f3a4e2af09'), ObjectId('5f86377b92dec2f3a4e3358d')], acknowledged=True)"
+       "InsertManyResult([ObjectId('5f86370592dec2f3a4e2af09'), ObjectId('5f86377b92dec2f3a4e3358d'), ObjectId('5f86362c92dec2f3a4e1ee09')], acknowledged=True)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "id": "7d2e8c33-82f2-4281-b9a7-b798639a1b64",
    "metadata": {},
    "outputs": [
@@ -357,7 +368,8 @@
      "output_type": "stream",
      "text": [
       "found10.1016/j.physletb.2018.01.009\n",
-      "found10.1016/j.physletb.2019.01.023\n"
+      "found10.1016/j.physletb.2019.01.023\n",
+      "found10.1016/s0370-2693(00)01067-4\n"
      ]
     }
    ],
@@ -382,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "id": "d08b3b1b-10db-4921-8653-0762009a6b00",
    "metadata": {},
    "outputs": [],
@@ -393,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "id": "f4b08bd3-511a-4cba-a961-51ab2ee47395",
    "metadata": {},
    "outputs": [
@@ -417,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "id": "12db725b-d11a-4ae2-989a-b2f1864b6f1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "10"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,17 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "id": "2e2be17f-3732-4f91-88ec-8f82fd766013",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertManyResult([ObjectId('5f86270892dec2f3a4dfa333'), ObjectId('5f8625b392dec2f3a4df7596'), ObjectId('5f86279292dec2f3a4dfb4ec'), ObjectId('5f86265f92dec2f3a4df8be8'), ObjectId('5f86264192dec2f3a4df878c'), ObjectId('5f86279292dec2f3a4dfb499'), ObjectId('5f86275492dec2f3a4dfacfd'), ObjectId('5f86251f92dec2f3a4df6218'), ObjectId('5f8627af92dec2f3a4dfb912')], acknowledged=True)"
+       "InsertManyResult([ObjectId('5f86270892dec2f3a4dfa333'), ObjectId('5f8625b392dec2f3a4df7596'), ObjectId('5f86279292dec2f3a4dfb4ec'), ObjectId('5f86265f92dec2f3a4df8be8'), ObjectId('5f86264192dec2f3a4df878c'), ObjectId('5f86279292dec2f3a4dfb499'), ObjectId('5f86275492dec2f3a4dfacfd'), ObjectId('5f86251f92dec2f3a4df6218'), ObjectId('5f8627af92dec2f3a4dfb912'), ObjectId('5f86300292dec2f3a4e0e0d4')], acknowledged=True)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "id": "89df0164-5434-4202-975f-f2ab5519e6d8",
    "metadata": {},
    "outputs": [],
@@ -479,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "id": "409bd7e2-b92d-45b5-806f-b3b199ec92fd",
    "metadata": {},
    "outputs": [],
@@ -495,17 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "id": "1a265c6c-3b4e-4f85-a4b3-dbc36aba870b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "11"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,17 +528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "08fac0da-1124-4d47-ad2c-ce1e6d2481d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertManyResult([ObjectId('629115516f6a44dc7d6b3e39'), ObjectId('629115506f6a44dc7d69e8c8'), ObjectId('629115506f6a44dc7d69eb12'), ObjectId('629115516f6a44dc7d6b34df'), ObjectId('629115506f6a44dc7d69d281'), ObjectId('629115516f6a44dc7d6b458d'), ObjectId('629115516f6a44dc7d6b428a'), ObjectId('629115516f6a44dc7d6b2393'), ObjectId('629115516f6a44dc7d6bca95'), ObjectId('629115516f6a44dc7d6b4719')], acknowledged=True)"
+       "InsertManyResult([ObjectId('629115516f6a44dc7d6b3e39'), ObjectId('629115506f6a44dc7d69e8c8'), ObjectId('629115506f6a44dc7d69eb12'), ObjectId('629115516f6a44dc7d6b34df'), ObjectId('629115506f6a44dc7d69d281'), ObjectId('629115516f6a44dc7d6b458d'), ObjectId('629115516f6a44dc7d6b428a'), ObjectId('629115516f6a44dc7d6b2393'), ObjectId('629115516f6a44dc7d6bca95'), ObjectId('629115516f6a44dc7d6b4719'), ObjectId('629115516f6a44dc7d6b9f25')], acknowledged=True)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "id": "6f1d8220-340b-4156-bc39-2be51cc3ba61",
    "metadata": {},
    "outputs": [],
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "id": "babce2d8-6dc6-4478-96bb-dffa66f21d0f",
    "metadata": {},
    "outputs": [],
@@ -567,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "id": "11e56108-2d63-4a35-aa9b-6ffbaabc7b2c",
    "metadata": {},
    "outputs": [],
@@ -582,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "id": "d1f02959-a027-4f97-8523-c09e7780776d",
    "metadata": {},
    "outputs": [
@@ -592,7 +604,7 @@
        "8"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "id": "a2183b0c-c285-4c92-bd9c-37901ee80db2",
    "metadata": {},
    "outputs": [],
@@ -616,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "id": "15e68e9e-351a-4141-a4fe-8977f0148b9e",
    "metadata": {},
    "outputs": [
@@ -626,7 +638,7 @@
        "InsertManyResult([ObjectId('637d3a26244b9f9d0fe574ae'), ObjectId('637d3a26244b9f9d0fe574b4'), ObjectId('637d3a26244b9f9d0fe574b2'), ObjectId('637d3a26244b9f9d0fe574b0'), ObjectId('637d3a26244b9f9d0fe574b1'), ObjectId('637d3a28244b9f9d0fe597dc'), ObjectId('637d3a26244b9f9d0fe574b3'), ObjectId('637d3a28244b9f9d0fe597d3')], acknowledged=True)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "id": "f184b590-5be3-4577-8439-3eb564f9b873",
    "metadata": {},
    "outputs": [],
@@ -657,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "e5dd2b19-204f-427d-a5c2-9024d44e5be6",
    "metadata": {},
    "outputs": [
@@ -667,7 +679,7 @@
        "8"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "id": "bcc19ddb-8d27-401b-aa40-fd577a5fb25c",
    "metadata": {},
    "outputs": [],
