--- a/kahi _sample_from_inspire_hep.ipynb
+++ b/kahi _sample_from_inspire_hep.ipynb
@@ -147,12 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "2fbaac8b-201b-4952-ba7f-97384ce4af5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dois' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#dois adicionales requeridos por Diego\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mdois\u001b[49m\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m10.1016/s0370-2693(00)01067-4\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m dois\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m10.1088/1475-7516/2013/04/044\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m dois\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m10.1103/physrevd.80.055010\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dois' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "dois.append('10.1016/s0370-2693(00)01067-4')"
+    "#dois adicionales requeridos por Diego\n",
+    "\n",
+    "dois.append('10.1016/s0370-2693(00)01067-4')\n",
+    "dois.append('10.1088/1475-7516/2013/04/044')\n",
+    "dois.append('10.1103/physrevd.80.055010')\n",
+    "dois.append('10.1088/1475-7516/2010/10/033')\n"
    ]
   },
   {
@@ -729,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
