added more dois required by Diego

--- a/kahi _sample_from_inspire_hep.ipynb
+++ b/kahi _sample_from_inspire_hep.ipynb
@@ -169,7 +169,12 @@
     "dois.append('10.1016/s0370-2693(00)01067-4')\n",
     "dois.append('10.1088/1475-7516/2013/04/044')\n",
     "dois.append('10.1103/physrevd.80.055010')\n",
-    "dois.append('10.1088/1475-7516/2010/10/033')\n"
+    "dois.append('10.1088/1475-7516/2010/10/033')\n",
+    "dois.append('10.1088/1126-6708/2006/08/036')\n",
+    "dois.append('10.1103/PhysRevD.86.075001')\n",
+    "dois.append('10.1103/PhysRevD.82.075002')\n",
+    "dois.append('10.1140/epjc/s10052-012-1941-1')\n",
+    "dois.append('10.1007/jhep05(2013)046')"
    ]
   },
   {
