added workflow to test scienti

--- a/kahi_sample_to_json.ipynb
+++ b/kahi_sample_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8b832e69-0a05-4695-af1d-19bbbe3feca9",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "780fce89-f9e8-45fa-aa9c-be8b894466fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = MongoClient()[\"kahi_sample\"]\n",
+    "db = MongoClient()[\"kahi_test\"]\n",
     "cols = [\"affiliations\", \"person\", \"sources\", \"subjects\", \"works\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "902ed439-c9ff-4fbf-b3f7-3533ebf70fc4",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d194906d-288d-4c67-8ae8-40e8fab50e26",
    "metadata": {},
    "outputs": [],
