--- a/impactu_posterior_calculations.ipynb
+++ b/impactu_posterior_calculations.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "fa181783-467f-433f-9d30-4d0ed329e464",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -237,7 +243,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "45195e9a-f357-4f79-8726-39513e6441e5",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
